--- a/apps/tma/package.json
+++ b/apps/tma/package.json
@@ -25,6 +25,8 @@
     "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
+    "effector": "^23.3.0",
+    "effector-react": "^23.3.0",
     "preact": "^10.26.9",
     "wouter-preact": "^3.7.1"
   }
