--- a/apps/tma/package.json
+++ b/apps/tma/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@prefresh/core": "^1.5.3",
     "@prefresh/webpack": "^4.0.2",
+    "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
     "esbuild-loader": "^4.3.0",
     "html-webpack-plugin": "^5.6.3",
