--- a/apps/tma/package.json
+++ b/apps/tma/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^5.2.2"
   },
   "dependencies": {
+    "@splitix/ds": "workspace:^",
     "effector": "^23.3.0",
     "effector-react": "^23.3.0",
     "preact": "^10.26.9",
