--- a/apps/tma/package.json
+++ b/apps/tma/package.json
@@ -15,6 +15,7 @@
     "@prefresh/webpack": "^4.0.2",
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.2",
     "esbuild-loader": "^4.3.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
